# fwupd

./: dev_setup  meson.build  meson_options.txt  test.dts  try.dts
contrib/: PKGBUILD
contrib/ci/: dependencies.xml
libfwupd/: fwupd-client.c  fwupd-device.c
plugins/: meson.build
plugins/dfu/: fu-dfu-common.c
plugins/vbe/: README.md  fit.c  fit.h  fit_test.c  fit_test.h  fu-plugin-vbe.c  fu-plugin-vbe.h  fu-vbe-device.c  fu-vbe-device.h  fu-vbe-simple-device.c  fu-vbe-simple-device.h  meson.build  vbe-simple.c  vbe-simple.h
plugins/vbe/example/: build.sh  com.Vbe.Board.metainfo.xml  rockpro64.dts  test.dts
